style.css
body {
    max-width: 1280px;
    width: 100%;
    margin: 0;
    padding: px;
    font-family: 'Inter', sans-serif;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding: 20px 0px;
}

.logo img {
    width: 100px;
    margin-left: 45px;

}

.menu-list ul {
    display: flex;
    align-items: center;
    list-style-type: none;
    gap: 25px;
    margin: 0px;
    padding: 0px;
}

.menu-list ul a {
    display: flex;
    text-decoration: none;
    color: black;
    font-family: 'Inter', sans-serif;
    font-weight: 400;
}

.common-button {
    background-color: #1D4ED8;
    color: white;
    padding: 10px 25px;
    border-radius: 8px;
    border: none;
    margin-right: 35px;
    font-family: 'Inter', sans-serif;
    font-weight: 600;
    font-size: 12px;
    cursor: pointer;
}

.hero-banner {
    background-image: linear-gradient(rgba(0, 0, 0, 0.041), rgba(0, 0, 0, 0.694)), url(./image/banner.jpg);
    height: 520px;
    background-size: cover;
    background-position: center;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;

    color: white;
    font-size: 28px;
}

.banner-content {
    max-width: 600px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.banner-content h1 {
    font-style: bold;
    padding-top: 50px;
    margin-bottom: 10px;
}

.banner-content span {
    font-style: italic;
}

.banner-content p {
    max-width: 600px;
    font-size: 16px;
    font-family: 'Inter', sans-serif;
    font-weight: 300;
    text-align: center;
    padding-bottom: 8rem;
}

.banner-button {
    background-color: #1D4ED8;
    color: white;
    padding: 10px 45px;
    border-radius: 8px;
    border: none;
    margin-right: 35px;
    font-family: 'Inter', sans-serif;
    font-weight: 600;
    font-size: 14px;
    cursor: pointer;
}

h2 {
    font-family: 'Inter', sans-serif;
    font-size: 36px;
    text-align: center;
    margin: 40px;
}

.guest {
    display: grid;
    grid-template-columns: 1fr 1fr;
    max-width: 1280px;
    margin: 10px 60px;
    justify-content: center;
    align-items: center;
    gap: 30px;

}

.profile {
    background: #ffffff;
    border-radius: 12px;
    overflow: hidden;
    border: 1px solid #d7d4d499;
    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.082);
}

.profile img {
    width: 100%;
    height: 324px;
    object-fit: cover;
    display: block;
}

sec,
name,
company {
    display: block;
    padding: 0 24px;
    font-family: 'inter', sans-serif;

}

sec {
    color: #1D4ED8;
    margin-top: 20px;
    margin-bottom: 10px;
    font-family: 'inter', sans-serif;
    text-transform: uppercase;
    font-size: 14px;
    font-weight: 500;
}

name {
    margin-top: 10px;
    margin-bottom: 10px;
    font-weight: bold;
}

company {
    color: rgb(181, 177, 177);
    margin-top: 10px;
    margin-bottom: 20px;
    font-size: smaller;
    font-weight: 500;
}

h3 {
    font-family: 'Inter', sans-serif;
    font-size: 36px;
    text-align: center;
    margin-top: 50px;
    margin-bottom: 0px;
}

.deadline {
    color: #575757;
    font-family: 'Inter', sans-serif;
    font-weight: 400;
    font-size: 14px;
    text-align: center;
    margin-bottom: 40px;
}

hr {
    border: none;
    border-top: 1px solid #9b9b9d79;
    margin: 0 30px;
}

p {
    font-family: 'Inter', sans-serif;
    font-weight: 600;
    font-size: 14px;
    margin: 30px 10px 0px 30px;
}

p1 {
    display: block;
    font-family: 'Inter', sans-serif;
    font-weight: 400;
    font-size: 12px;
    margin: 5px 10px 20px 30px;
}

.pricing {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    max-width: 1080px;
    margin: 10px auto;
    justify-content: center;
    align-items: center;
    gap: 20px;
}

.pricing span {
    display: inline-block;
    font-family: 'Inter', sans-serif;
    margin: 5px 10px 0px 30px;
    font-weight: bold;
    font-size: 44px;
}

.pricing ul {
    color: #575757;
    font-family: 'Inter', sans-serif;
    font-weight: 500;
    font-size: 12px;
    margin-bottom: 20px;

}

.pricing ul li {
    margin-bottom: 10px;
}

.pricing li::marker {
    color: #1D4ED8;
}

.standard,
.pro,
.team {
    justify-content: center;
    align-items: center;
    border-radius: 12px;
    border: 1px solid #d7d4d499;
}

.standard p,
p1 {
    color: #575757;
}

.standard button {
    display: block;
    color: #1D4ED8;
    background-color: transparent;
    border: 1px solid #1D4ED8;
    border-radius: 12px;
    outline: none;
    padding: 10px 90px;
    margin: 0 auto;
    margin-bottom: 30px;
    cursor: pointer;
}

.pro {
    background-color: #0d1b2a;
}

.pro p {
    color: #93C5FD;
}

.pro span {
    color: white;
}

.pro p1 {
    color: #aeabab;
}

.pro li {
    color: #aeabab;
}

.pro button {
    display: block;
    color: #ffffff;
    background-color: #1D4ED8;
    border-radius: 12px;
    border: none;
    outline: none;
    padding: 10px 110px;
    margin: 0 auto;
    margin-bottom: 30px;
    cursor: pointer;
}

.team {
    background-color: #c3c1c129;
}

.team p,
p1 {
    color: #575757;
}

.team button {
    display: block;
    color: #4d4d4e;
    background-color: transparent;
    border: 1px solid #4d4d4e;
    border-radius: 12px;
    outline: none;
    padding: 10px 100px;
    margin: 0 auto;
    margin-bottom: 30px;
    cursor: pointer;
}

h4 {
    display: block;
    font-family: 'Inter', sans-serif;
    font-size: 24px;
    font-weight: 600;
    text-align: center;
    margin-top: 50px;
    margin-bottom: 0px;
    padding-bottom: 30px;
}

.faq-container {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    align-items: start;
    column-gap: 50px;
    row-gap: 15px;
    margin: 0px auto;
    max-width: 1000px;
    padding: 30px 50px;
    background-color: #57575718;
    border: 1px solid #d7d4d499;
    border-radius: 12px;


}

.faq-container details {
    font-weight: bold;
    background-color: transparent;
    text-align: left;
}

.footer-container summary {
    font-family: 'Inter', sans-serif;
    font-size: 2rem;

}

.faq-container p {
    font-family: 'Inter', sans-serif;
    text-align: justify;
    font-weight: 500;
    margin-top: 10px;
    margin-left: 20px;
}

.sponser ul {
    max-width: 1200px;
    display: flex;
    justify-content: center;
    align-items: center;
    list-style-type: none;
    gap: 80px;
    margin: 5px 0;
    padding-bottom: 30px;
}

.sponser li img {
    height: 30px;
    width: auto;
}



hr {
    border: none;
    border-top: 1px solid #9b9b9d79;
    margin: 0 30px;
}

footer {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    background-color: #071d3b;
    max-width: 1200px;
    margin: 0 auto;
    padding: 20px 40px;
}

.footer-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    max-width: 1200px;
    width: 100%;
    gap: ;
}

.logo-mini {
    display: flex;
    align-items: center;
    gap: 5px;
}

.logo-mini h {
    color: #ffffff;
    font-family: 'Inter', sans-serif;
    font-weight: bold;
    font-size: large;
}

.logo-mini img {
    width: 36px;
    height: 36px;
    margin-left: 50px;

}

footer ul li {
    list-style-type: none;
}

footer ul {
    display: flex;
    justify-content: space-between;
    gap: 5px;
}

footer ul li {
    list-style-type: none;
}

footer ul li a {
    font-family: 'Inter', sans-serif;
    font-weight: 300;
    text-decoration: none;
    color: rgb(255, 255, 255);
    font-size: large;
    margin-right: 50px;
}

.footer-divider {
    border: none;
    border-top: 1px solid #9b9b9d79;
    padding-bottom: 20px;
    margin: 5px 0;
    width: 95%;
}

footer p3 {
    font-family: 'Inter', sans-serif;
    font-size: small;
    color: #ffffff;
    text-align: center;
}

